external-crates/move/crates/move-compiler/tests/move_check/typing/spec_block_ok.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E03004]: unbound type
  ┌─ tests/move_check/typing/spec_block_ok.move:3:10
  │
3 │         (spec {}: ())
  │          ^^^^ Unbound type 'spec' in current scope
